--- a/plugin.yml
+++ b/plugin.yml
@@ -5,7 +5,7 @@ main: mc.alk.tracker.Tracker
 
 
 author: alkarin
-softdepend: [BattleCore,Essentials, Herochat,TownyChat]
+softdepend: [BattleCore, Essentials, Herochat, TownyChat, PlaceholderAPI]
 description: A tracker for PvP player related events with leaderboard signs.  Includes database backend.
 commands:
     battleTracker:
