--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>mc.alk</groupId>
     <artifactId>BattleTracker</artifactId>
     <packaging>jar</packaging>
-    <version>2.5.10.0</version>
+    <version>2.5.10.1</version>
     <name>BattleTracker</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,6 +24,10 @@
         <repository>
             <id>placeholderapi-repo</id>
             <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+        </repository>
+        <repository>
+            <id>codemc-repo</id>
+            <url>https://repo.codemc.org/repository/maven-public</url>
         </repository>
     </repositories>
     <!-- Dependencies -->
@@ -63,6 +67,12 @@
             <groupId>mc.alk</groupId>
             <artifactId>BattlePluginUpdater</artifactId>
             <version>2.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.bstats</groupId>
+            <artifactId>bstats-bukkit</artifactId>
+            <version>1.4</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -148,6 +158,11 @@
                                     <pattern>mc.alk.battlepluginupdater</pattern>
                                     <shadedPattern>mc.alk.tracker.alib.battlepluginupdater</shadedPattern>
                                 </relocation>
+                                <relocation>
+                                    <pattern>org.bstats.bukkit</pattern>
+                                    <!-- Replace this with your package! -->
+                                    <shadedPattern>mc.alk.tracker.alib.metrics</shadedPattern>
+                                </relocation>
                             </relocations>
                             <artifactSet>
                                 <includes>
@@ -156,6 +171,7 @@
                                     <include>mc.alk:BattleCore</include>
                                     <include>mc.alk:BattleBukkitLib</include>
                                     <include>mc.alk:BattlePluginUpdater</include>
+                                    <include>org.bstats:bstats-bukkit</include>
                                 </includes>
                             </artifactSet>
                             <!-- Specify to remove all unneeded classes -->
