--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>mc.alk</groupId>
     <artifactId>BattleTracker</artifactId>
     <packaging>jar</packaging>
-    <version>2.5.10.3</version>
+    <version>2.5.10.4</version>
     <name>BattleTracker</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -15,7 +15,7 @@
     <repositories>
         <repository>
             <id>battleplugins-repo</id>
-            <url>https://artifactory.battleplugins.org/artifactory/libs-release</url>
+            <url>https://repo.battleplugins.org/artifactory/libs-release</url>
         </repository>
         <repository>
             <id>spigot-repo</id>
@@ -193,13 +193,13 @@
     <distributionManagement>
         <repository>
             <id>central</id>
-            <name>BattlePlugins Artifactory Server-releases</name>
-            <url>https://artifactory.battleplugins.org/artifactory/libs-release-local</url>
+            <name>BattlePlugins Maven Server-releases</name>
+            <url>https://repo.battleplugins.org/artifactory/libs-release-local</url>
         </repository>
         <snapshotRepository>
             <id>snapshots</id>
-            <name>BattlePlugins Artifactory Server-snapshots</name>
-            <url>https://artifactory.battleplugins.org/artifactory/libs-snapshot-local</url>
+            <name>BattlePlugins Maven Server-snapshots</name>
+            <url>https://repo.battleplugins.org/artifactory/libs-snapshot-local</url>
         </snapshotRepository>
     </distributionManagement>
 </project>
