--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>mc.alk</groupId>
     <artifactId>BattleTracker</artifactId>
     <packaging>jar</packaging>
-    <version>2.5.10.5</version>
+    <version>2.5.10.6</version>
     <name>BattleTracker</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -53,6 +53,12 @@
             <groupId>mc.euro</groupId>
             <artifactId>BukkitAdapter</artifactId>
             <version>1.2.7</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>mc.euro</groupId>
+            <artifactId>BukkitInterface</artifactId>
+            <version>4.0.1</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -151,6 +157,10 @@
                                     <shadedPattern>mc.alk.tracker.alib.bukkitadapter</shadedPattern>
                                 </relocation>
                                 <relocation>
+                                    <pattern>mc.euro.bukkitinterface</pattern>
+                                    <shadedPattern>mc.alk.tracker.alib.bukkitinterface</shadedPattern>
+                                </relocation>
+                                <relocation>
                                     <pattern>mc.alk.v1r7</pattern>
                                     <shadedPattern>mc.alk.tracker.battlecore</shadedPattern>
                                 </relocation>
@@ -172,6 +182,7 @@
                                 <includes>
                                     <include>mc.euro:Version</include>
                                     <include>mc.euro:BukkitAdapter</include>
+                                    <include>mc.euro:BukkitInterface</include>
                                     <include>mc.alk:BattleCore</include>
                                     <include>mc.alk:BattleBukkitLib</include>
                                     <include>mc.alk:BattlePluginUpdater</include>
