--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ bstats-bukkit = "3.0.2"
 paper-api = "1.20.4-R0.1-SNAPSHOT"
 commons = "2.12.0"
 battlearena = "4.0.0-SNAPSHOT"
+placeholderapi = "2.11.6"
 
 [libraries]
 battlearena = { group = "org.battleplugins", name = "arena", version.ref = "battlearena" }
@@ -10,3 +11,4 @@ bstats-bukkit = { group = "org.bstats", name = "bstats-bukkit", version.ref = "b
 paper-api = { group = "io.papermc.paper", name = "paper-api", version.ref = "paper-api" }
 commons-dbcp = { group = "org.apache.commons", name = "commons-dbcp2", version.ref = "commons" }
 commons-pool = { group = "org.apache.commons", name = "commons-pool2", version.ref = "commons" }
+placeholderapi = { group = "me.clip", name = "placeholderapi", version.ref = "placeholderapi" }
