Add support for tracking custom statistics in BattleArena

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -16,6 +16,7 @@ player-has-no-record: "<red>The player <gold>{}</gold> has no record!</red>"
 player-has-no-tally: "<red>The players <gold>{}</gold> and <gold>{}</gold> have no tally!</red>"
 rank: "<gold>%player%</gold> <gray>-</gray> <aqua>%rating%</aqua> <yellow>(Max Rating: %max_rating%)</yellow> <red>Kills: <gold>%kills%</gold> Deaths: <gold>%deaths%</gold> KDR: <gold>%kd_ratio%</gold></red>"
 rank-arena: "<gold>%player%</gold> <gray>-</gray> <aqua>%rating%</aqua> <yellow>(Max Rating: %max_rating%)</yellow> <red>Wins: <gold>%wins%</gold> Losses: <gold>%losses%</gold> <red>Kills: <gold>%kills%</gold> Deaths: <gold>%deaths%</gold> KDR: <gold>%kd_ratio%</gold></red>"
+rank-arena-stats: "<yellow>Arena Statistics:</yellow>"
 recap: "Recap"
 recap-damage-log: "<gold>Damage Log:</gold>"
 recap-click-for-more: "<aqua>Click for more information...</aqua>"
